# intro_pysdmx_webinar

./: .gitignore  LICENSE  README.md  pyproject.toml  utils.py  webinarDataProducers.ipynb  webinarDataProducersNoText.ipynb
SDMX_Structures/: concepts.xml  structures.xml
data_files/: golden_copy_changed_10000.csv  golden_copy_changed_10000_sdmx.csv  golden_copy_changed_sdmx.csv
vtl/: calculations.vtl  script.vtl  validations.vtl
